--- a/indextranslate.html
+++ b/indextranslate.html
@@ -30,7 +30,7 @@
         <ul>
           <li><a href="#home">HOME</a></li>
           <li><a href="#contact">CONTACT</a></li>
-          <li><a href="nostravaux.html#nostravaux">OUR WORK</a></li>
+          <li><a href="nostravauxtranslate.html">OUR WORK</a></li>
         </ul>
       </nav>
     </header>
