--- a/nostravauxtranslate.html
+++ b/nostravauxtranslate.html
@@ -28,7 +28,7 @@
     
       <nav>
         <ul>
-          <li><a href="index.html#home">HOME</a></li>
+          <li><a href="indextranslate.html">HOME</a></li>
           <li><a href="index.html#carte">CONTACT</a></li>
           <li><a href="nostravaux.html#nostravaux">OUR WORK</a></li>
         </ul>
